after more problems solved..

--- a/edabit_solutions.html
+++ b/edabit_solutions.html
@@ -6,6 +6,6 @@
     <script src="JavaScript/edabit_solutions.js"></script>
 </head>
 <body>
-    <button onclick="addition();">Press Here!</button>
+    <button onclick="howManySeconds();">Press Here!</button>
 </body>
 </html>
